feati11:Implementation of the Spring Security

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,8 +16,13 @@ spring:
 
     show-sql: false
 
-  logging:
-    level:
-      org.springframework.security: DEBUG
+
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
+
   main:
     allow-bean-definition-overriding: true
