--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,17 @@ spring:
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${jAVA_MAIL_EMAIL}
+    password: ${jAVA_MAIL_PASSWORD}
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+      mail.smtp.ssl.trust: smtp.gmail.com
+    test-connection: true
+
   jpa:
     open-in-view: false
     hibernate:
@@ -26,3 +37,6 @@ logging:
 
   main:
     allow-bean-definition-overriding: true
+
+
+
