--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 			**/utils/PaginatedResponse.java,
 			**/utils/ValidatorUtils.java,
 			**/controller/UserRegistrationController.java,
+			**/controller/CustomerController.java,
 			**/service/user/JwtTokenService.java,
 			**/com.github.Real_TimeDeliveryTrackingSystem.Real_TimeDeliveryTrackingSystem/RealTimeDeliveryTrackingSystemApplication.class
 
