--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
 			**/utils/ValidatorUtils.java,
 			**/controller/UserRegistrationController.java,
 			**/controller/CustomerController.java,
+			**/controller/DriverController.java,
 			**/service/user/JwtTokenService.java,
 			**/com.github.Real_TimeDeliveryTrackingSystem.Real_TimeDeliveryTrackingSystem/RealTimeDeliveryTrackingSystemApplication.class
 
