featI49: Implementation of the JavaDoc to the MercadoPagoController

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,7 @@ mercado-pago:
   mercado-pago-public-key: ${MERCADO_PAGO_PUBLIC_KEY}
   mercado-pago-access-token: ${MERCADO_PAGO_ACCESS_TOKEN}
   mercado-pago-webhook-secret: ${MERCADO_PAGO_WEBHOOK_SECRET}
+  test-mail: ${TEST_MAIL}
 
 stripe:
   stripe-secret-key: ${STRIPE_SECRET_KEY}
