featI49: Improvement in the docker file and compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -41,12 +41,18 @@ services:
       SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
       SPRING_MAIL_HOST: smtp.gmail.com
       SPRING_MAIL_PORT: 587
+      SECRET_KEY: ${SECRET_KEY}
+      TEST_MAIL: ${TEST_MAIL}
+      NROK_URL: ${NROK_URL}
+      MERCADO_PAGO_PUBLIC_KEY: ${MERCADO_PAGO_PUBLIC_KEY}
+      MERCADO_PAGO_ACCESS_TOKEN: ${MERCADO_PAGO_ACCESS_TOKEN}
       SPRING_MAIL_USERNAME: ${JAVA_MAIL_EMAIL}
       SPRING_MAIL_PASSWORD: ${JAVA_MAIL_PASSWORD}
       SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH: "true"
       SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE: "true"
       SPRING_MAIL_PROPERTIES_MAIL_SMTP_SSL_TRUST: smtp.gmail.com
       SPRING_MAIL_TEST-CONNECTION: "true"
+
     ports:
       - "${EXPOSE_PORT}:${CONTAINER_PORT}"
     depends_on:
