feati52: Implementation of the kafka consumer and producer

--- a/pom.xml
+++ b/pom.xml
@@ -232,19 +232,6 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
-        <!--		&lt;!&ndash; PayPal &ndash;&gt;-->
-
-        <!--		<dependency>-->
-        <!--			<groupId>com.paypal.sdk</groupId>-->
-        <!--			<artifactId>paypal-core</artifactId>-->
-        <!--			<version>1.7.2</version>-->
-        <!--		</dependency>-->
-
-
-        <!--		<dependency>-->
-        <!--			<groupId>com.paypal.sdk</groupId>-->
-        <!--			<artifactId>rest-api-sdk</artifactId>-->
-        <!--			<version>1.14.0</version>  </dependency>-->
 
         <!-- Mercado Pago -->
         <dependency>
@@ -253,10 +240,18 @@
             <version>2.1.29</version>
         </dependency>
 
+
         <dependency>
             <groupId>com.mercadopago</groupId>
             <artifactId>dx-java</artifactId>
             <version>1.8.0</version> </dependency>
+
+        <!-- Kafka -->
+
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.stripe</groupId>
