--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
 
   kafka:
@@ -11,10 +9,23 @@ services:
       - KAFKA_CFG_PROCESS_ROLES=broker,controller
       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@localhost:9093
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://${KAFKA_BOOTSTRAP_SERVERS}
       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
       - KAFKA_KRAFT_CLUSTER_ID=kraft-cluster-1
+
+    volumes:
+      - kafka-persistence:/bitnami/kafka
+
+    networks:
+      - Real-Time_Delivery_Tracking_System_network
+
+    healthcheck:
+      test: [ "CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --list || exit 1" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   db:
     image: mysql:8.3.0
@@ -44,6 +55,13 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
 
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "$$MYSQL_USER", "-p$$MYSQL_PASSWORD" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
+
   real-time_delivery_tracking_system:
     build: .
     image: guilhermebauer/real-timedeliverytrackingsystem:latest
@@ -59,6 +77,7 @@ services:
       SECRET_KEY: ${SECRET_KEY}
       TEST_MAIL: ${TEST_MAIL}
       NROK_URL: ${NROK_URL}
+      KAFKA_BOOTSTRAP_SERVERS: ${KAFKA_BOOTSTRAP_SERVERS}
       MERCADO_PAGO_PUBLIC_KEY: ${MERCADO_PAGO_PUBLIC_KEY}
       MERCADO_PAGO_ACCESS_TOKEN: ${MERCADO_PAGO_ACCESS_TOKEN}
       SPRING_MAIL_USERNAME: ${JAVA_MAIL_EMAIL}
@@ -71,7 +90,10 @@ services:
     ports:
       - "${EXPOSE_PORT}:${CONTAINER_PORT}"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+      kafka:
+        condition: service_healthy
     networks:
       - Real-Time_Delivery_Tracking_System_network
 
@@ -81,3 +103,5 @@ networks:
 
 volumes:
   mysql_data:
+  kafka-persistence:
+
